log
Fri 12 Aug 2022 12:49:14 PM UTC: 
 tests:  0|7
total_score: 0/70
6ce0364
Fri 12 Aug 2022 12:55:42 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘suma’:
exercises.c:15:7: error: ‘a’ redeclared as different kind of symbol
   15 |   int a, b, c;
      |       ^
exercises.c:14:15: note: previous definition of ‘a’ was here
   14 | void suma(int a, int b, int * c) {
      |           ~~~~^
exercises.c:15:10: error: ‘b’ redeclared as different kind of symbol
   15 |   int a, b, c;
      |          ^
exercises.c:14:22: note: previous definition of ‘b’ was here
   14 | void suma(int a, int b, int * c) {
      |                  ~~~~^
exercises.c:15:13: error: ‘c’ redeclared as different kind of symbol
   15 |   int a, b, c;
      |             ^
exercises.c:14:31: note: previous definition of ‘c’ was here
   14 | void suma(int a, int b, int * c) {
      |                         ~~~~~~^
exercises.c:15:13: error: variable ‘c’ set but not used [-Werror=unused-but-set-variable]
   15 |   int a, b, c;
      |             ^
cc1: all warnings being treated as errors
Compilation failed
23eaaed
Fri 12 Aug 2022 01:05:25 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘suma’:
exercises.c:15:5: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   15 |   c = a+b;
      |     ^
cc1: all warnings being treated as errors
Compilation failed
f7c8616
Fri 12 Aug 2022 01:05:43 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
34ba131
Fri 12 Aug 2022 01:20:29 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:10: error: too few arguments to function ‘sumaN’
   40 |   suma = sumaN()
      |          ^~~~~
exercises.c:21:5: note: declared here
   21 | int sumaN(int a[], int N) {
      |     ^~~~~
exercises.c:40:17: error: expected ‘;’ before ‘}’ token
   40 |   suma = sumaN()
      |                 ^
      |                 ;
   41 | }
      | ~                
Compilation failed
9f0340b
Fri 12 Aug 2022 01:21:00 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
dde8e03
Fri 12 Aug 2022 03:01:25 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:19: error: expected expression before ‘]’ token
   40 |   *suma = sumaN(a[], n) - sumaN(a[], n-m);
      |                   ^
Compilation failed
5e5770a
Fri 12 Aug 2022 03:03:36 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:41:19: error: expected expression before ‘]’ token
   41 |   *suma = sumaN(a[], n) - sumaN(a[], principio);
      |                   ^
exercises.c:40:7: error: unused variable ‘principio’ [-Werror=unused-variable]
   40 |   int principio = n-m;
      |       ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0d3ff5c
Fri 12 Aug 2022 03:06:32 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:23: error: expected expression before ‘]’ token
   40 |   int total = sumaN(a[], n);
      |                       ^
exercises.c:41:27: error: expected expression before ‘]’ token
   41 |   int principio = sumaN(a[], n-m+1)
      |                           ^
exercises.c:42:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   42 | }
      | ^
test.c: In function ‘test_suma’:
test.c:61:9: error: called object ‘suma’ is not a function or function pointer
   61 |         suma(i,j, res);
      |         ^~~~
In file included from test.c:5:
exercises.c:39:48: note: declared here
   39 | void sumaNultimos(int a[], int n, int m, int * suma) {
      |                                          ~~~~~~^~~~
test.c: In function ‘sumaNultimos’:
test.c:244:5: error: ‘main’ is normally a non-static function [-Werror=main]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:266:1: error: expected declaration or statement at end of input
  266 | }
      | ^
In file included from test.c:5:
exercises.c:41:7: error: unused variable ‘principio’ [-Werror=unused-variable]
   41 |   int principio = sumaN(a[], n-m+1)
      |       ^~~~~~~~~
exercises.c:40:7: error: unused variable ‘total’ [-Werror=unused-variable]
   40 |   int total = sumaN(a[], n);
      |       ^~~~~
At top level:
test.c:244:5: error: ‘main’ defined but not used [-Werror=unused-function]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
a11ed7f
Fri 12 Aug 2022 03:06:43 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:23: error: expected expression before ‘]’ token
   40 |   int total = sumaN(a[], n);
      |                       ^
exercises.c:41:27: error: expected expression before ‘]’ token
   41 |   int principio = sumaN(a[], n-m+1);
      |                           ^
exercises.c:41:7: error: unused variable ‘principio’ [-Werror=unused-variable]
   41 |   int principio = sumaN(a[], n-m+1);
      |       ^~~~~~~~~
exercises.c:40:7: error: unused variable ‘total’ [-Werror=unused-variable]
   40 |   int total = sumaN(a[], n);
      |       ^~~~~
cc1: all warnings being treated as errors
Compilation failed
b3363db
